# emacs-lsp-booster

./: .dir-locals.el  .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: build-test.yml  release.yml  rust.yml
examples/: native-json-parser.rs
src/: app.rs  bytecode.rs  lib.rs  lsp_message.rs  main.rs  rpcio.rs
tests/: app_test.rs  benchmark_and_compare.template.el  bytecode_test.rs
tests/data/: completion.json  completion2.json  completion3.json  publishDiagnostics.json  publishDiagnostics2.json
