[package]
name = "emacs-lsp-booster"
version = "0.0.0"  # this package will never be published as lib, so ignore this version field
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
anyhow = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
smallvec = "1.11"
env_logger = "0.10"
log = "0.4.20"
clap = { version = "4.4", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.1.1"
which = "6.0.1"
simd-json = "0.14.3"
snmalloc-rs = { version = "0.3.7", features = ["native-cpu"] }

[[example]]
name = "native-json-parser"
crate-type = ["cdylib"]

[dev-dependencies]
emacs = "0.18"
tempfile = "3.9"
